unpackaged/main/default/objects/sked_Admin_Setting__c/sked_Admin_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Skedulo Admin Setting</label>
</CustomObject>