unpackaged/main/default/objects/sked_Admin_Setting__c/fields/Admin_Call_List_Recipient_None_FS__c.field-meta.xml
<CustomField>
    <fullName>Admin_Call_List_Recipient_None_FS__c</fullName>
    <label>Admin Call List Recipient-None FS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>