unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_Admin_BSF_Support_Email__c.field-meta.xml
<CustomField>
    <fullName>sked_Admin_BSF_Support_Email__c</fullName>
    <defaultValue>&#39;bsfsupport@redcross.org&#39;</defaultValue>
    <label>Admin BSF Support Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>