unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_Admin_Call_List_Recipient_None__c.field-meta.xml
<CustomField>
    <fullName>sked_Admin_Call_List_Recipient_None__c</fullName>
    <defaultValue>140</defaultValue>
    <label>Admin Call List Recipient-None</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>