unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_Admin_DateTime_Conversion__c.field-meta.xml
<CustomField>
    <fullName>sked_Admin_DateTime_Conversion__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Admin DateTime Conversion</label>
    <type>Checkbox</type>
</CustomField>