unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_Admin_Days_to_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>sked_Admin_Days_to_Confirmed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>X days prior to Drive Date that Drive Status will be moved to Confirmed from Tentative If Opportunity Stage is Closed</description>
    <label>Admin Days to Confirmed</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>