unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_Admin_Days_to_Validate_Work_Days_Ex__c.field-meta.xml
<CustomField>
    <fullName>sked_Admin_Days_to_Validate_Work_Days_Ex__c</fullName>
    <label>Admin Days to Validate Work Days Ex</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>