unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_Admin_Distance_Measurement_Unit__c.field-meta.xml
<CustomField>
    <fullName>sked_Admin_Distance_Measurement_Unit__c</fullName>
    <label>Admin Distance Measurement Unit</label>
    <length>2</length>
    <type>Text</type>
</CustomField>