unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_Admin_Enable_Operation_Record_Log__c.field-meta.xml
<CustomField>
    <fullName>sked_Admin_Enable_Operation_Record_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admin Enable Operation Record Log</label>
    <type>Checkbox</type>
</CustomField>