unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_Admin_Enable_Resource_Call_Out__c.field-meta.xml
<CustomField>
    <fullName>sked_Admin_Enable_Resource_Call_Out__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Admin Enable Resource Call Out</label>
    <type>Checkbox</type>
</CustomField>