unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_Admin_Enable_Workday_Logging__c.field-meta.xml
<CustomField>
    <fullName>sked_Admin_Enable_Workday_Logging__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Admin Enable Workday Logging</label>
    <type>Checkbox</type>
</CustomField>