unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_Admin_Exavalu_Integration__c.field-meta.xml
<CustomField>
    <fullName>sked_Admin_Exavalu_Integration__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Admin Exavalu Integration</label>
    <type>Checkbox</type>
</CustomField>