unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_Admin_FCC_Code_Mobile__c.field-meta.xml
<CustomField>
    <fullName>sked_Admin_FCC_Code_Mobile__c</fullName>
    <label>Admin FCC Code Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>