unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_Admin_FS_Donors_Per_Hour_Capacity__c.field-meta.xml
<CustomField>
    <fullName>sked_Admin_FS_Donors_Per_Hour_Capacity__c</fullName>
    <label>Admin FS Donors Per Hour Capacity</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>