unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_Admin_Last_Collections_Zip_Run__c.field-meta.xml
<CustomField>
    <fullName>sked_Admin_Last_Collections_Zip_Run__c</fullName>
    <label>Admin Last Collections Zip Run</label>
    <type>DateTime</type>
</CustomField>