unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_Admin_Migration_Mode__c.field-meta.xml
<CustomField>
    <fullName>sked_Admin_Migration_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admin Migration Mode</label>
    <type>Checkbox</type>
</CustomField>