unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_Admin_Op_Record_Tech_Support_Email__c.field-meta.xml
<CustomField>
    <fullName>sked_Admin_Op_Record_Tech_Support_Email__c</fullName>
    <label>Admin Op Record Tech Support Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>