unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_Admin_Schedulers_Group_Email__c.field-meta.xml
<CustomField>
    <fullName>sked_Admin_Schedulers_Group_Email__c</fullName>
    <label>Admin Schedulers Group Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>