unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_Admin_Tag_Expiry_Alert_Days__c.field-meta.xml
<CustomField>
    <fullName>sked_Admin_Tag_Expiry_Alert_Days__c</fullName>
    <defaultValue>60</defaultValue>
    <inlineHelpText>Number of days prior to the expiry of a Resource Tag (Role/Certification)</inlineHelpText>
    <label>Admin Tag Expiry Alert Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>