unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_Admin_Workday_Integration__c.field-meta.xml
<CustomField>
    <fullName>sked_Admin_Workday_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admin Workday PTO Integration</label>
    <type>Checkbox</type>
</CustomField>