unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_Drive_Notification_After__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Notification_After__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Drive Notification After (hrs)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>