unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_LAC_Calendar_Start__c.field-meta.xml
<CustomField>
    <fullName>sked_LAC_Calendar_Start__c</fullName>
    <defaultValue>800</defaultValue>
    <label>LAC Calendar Start</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>