unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_LAC_Monthpicker_Format__c.field-meta.xml
<CustomField>
    <fullName>sked_LAC_Monthpicker_Format__c</fullName>
    <defaultValue>&#39;M yy&#39;</defaultValue>
    <label>LAC Monthpicker Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>