unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_LAC_View_Period__c.field-meta.xml
<CustomField>
    <fullName>sked_LAC_View_Period__c</fullName>
    <defaultValue>2</defaultValue>
    <label>LAC View Period</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>