unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_Max_CDL_DOT_Duration__c.field-meta.xml
<CustomField>
    <fullName>sked_Max_CDL_DOT_Duration__c</fullName>
    <defaultValue>14</defaultValue>
    <label>Max CDL DOT Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>