unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_MigrationID__c.field-meta.xml
<CustomField>
    <fullName>sked_MigrationID__c</fullName>
    <externalId>true</externalId>
    <label>MigrationID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>