unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_My_Availability_Console_URL__c.field-meta.xml
<CustomField>
    <fullName>sked_My_Availability_Console_URL__c</fullName>
    <label>My Availability Console URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>