unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_Num_Auto_Expire_Days__c.field-meta.xml
<CustomField>
    <fullName>sked_Num_Auto_Expire_Days__c</fullName>
    <defaultValue>100</defaultValue>
    <description>The number of days that needs to pass before pending/waitlist requests are expired and subsequently ignored by the slot autofill batch.</description>
    <label>Num Auto Expire Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>