unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_Optimization_Timeout__c.field-meta.xml
<CustomField>
    <fullName>sked_Optimization_Timeout__c</fullName>
    <defaultValue>6</defaultValue>
    <inlineHelpText>Time out in minute</inlineHelpText>
    <label>Optimization Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>