unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_PAC_Calendar_End__c.field-meta.xml
<CustomField>
    <fullName>sked_PAC_Calendar_End__c</fullName>
    <defaultValue>2000</defaultValue>
    <label>PAC Calendar End</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>