unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_PAC_Calendar_Start__c.field-meta.xml
<CustomField>
    <fullName>sked_PAC_Calendar_Start__c</fullName>
    <defaultValue>700</defaultValue>
    <label>PAC Calendar Start</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>