unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_PAC_Date_Format__c.field-meta.xml
<CustomField>
    <fullName>sked_PAC_Date_Format__c</fullName>
    <defaultValue>&#39;MM/dd/yy	&#39;</defaultValue>
    <label>PAC Date Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>