unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_PAC_Datepicker_Format__c.field-meta.xml
<CustomField>
    <fullName>sked_PAC_Datepicker_Format__c</fullName>
    <defaultValue>&#39;mm/dd/yy&#39;</defaultValue>
    <label>PAC Datepicker Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>