unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_PAC_No_of_Recur_Weeks__c.field-meta.xml
<CustomField>
    <fullName>sked_PAC_No_of_Recur_Weeks__c</fullName>
    <defaultValue>52</defaultValue>
    <label>PAC No of Recur Weeks</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>