unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_PAC_Weekpicker_Format__c.field-meta.xml
<CustomField>
    <fullName>sked_PAC_Weekpicker_Format__c</fullName>
    <defaultValue>&#39;s[M d] - e[M d, yy]&#39;</defaultValue>
    <label>PAC Weekpicker Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>