unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_RAC_Auto_Approval_Cutoff_Days__c.field-meta.xml
<CustomField>
    <fullName>sked_RAC_Auto_Approval_Cutoff_Days__c</fullName>
    <defaultValue>30</defaultValue>
    <label>RAC Auto Approval Cutoff Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>