unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_RAC_Calendar_Start__c.field-meta.xml
<CustomField>
    <fullName>sked_RAC_Calendar_Start__c</fullName>
    <defaultValue>700</defaultValue>
    <label>RAC Calendar Start</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>