unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_RAC_Calendar_Step__c.field-meta.xml
<CustomField>
    <fullName>sked_RAC_Calendar_Step__c</fullName>
    <defaultValue>30</defaultValue>
    <label>RAC Calendar Step</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>