unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_RAC_First_Day__c.field-meta.xml
<CustomField>
    <fullName>sked_RAC_First_Day__c</fullName>
    <defaultValue>0</defaultValue>
    <label>RAC First Day</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>