unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_RAC_Max_Activity_Recurring_Years__c.field-meta.xml
<CustomField>
    <fullName>sked_RAC_Max_Activity_Recurring_Years__c</fullName>
    <defaultValue>10</defaultValue>
    <description>The maximum number of years a user is allowed to create a recurring activity for</description>
    <label>RAC Max Activity Recurring Years</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>