unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_RAC_Respect_Resource_Timezone__c.field-meta.xml
<CustomField>
    <fullName>sked_RAC_Respect_Resource_Timezone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RAC Respect Resource Timezone</label>
    <type>Checkbox</type>
</CustomField>