unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_RAC_SB_Chunk_Size__c.field-meta.xml
<CustomField>
    <fullName>sked_RAC_SB_Chunk_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <label>RAC Staffing Budget Chunk Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>