unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_RAC_Show_Legend__c.field-meta.xml
<CustomField>
    <fullName>sked_RAC_Show_Legend__c</fullName>
    <defaultValue>true</defaultValue>
    <label>RAC Show Legend</label>
    <type>Checkbox</type>
</CustomField>