unpackaged/main/default/objects/sked_Admin_Setting__c/fields/sked_Run_Optimization_on_Dev__c.field-meta.xml
<CustomField>
    <fullName>sked_Run_Optimization_on_Dev__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Optimization on Dev</label>
    <type>Checkbox</type>
</CustomField>